--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ function StationThree()
 }
 function StationFour()
 {
-     var myarray= new Array("Station 4 - Soil/Rock:You are charred in a ground forest fire and are now almost impossible to decompose. STAY at SOIL/ROCK (Station 4).<br>",
+     var myarray= new Array("Station 4 - Soil/Rock:<br>You are charred in a ground forest fire and are now almost impossible to decompose. STAY at SOIL/ROCK (Station 4).",
                             "Station 4 - Soil/Rock:<br>You are trapped in bog sediments and eventually become natural gas. Go to FOSSIL FUELS (Station 5).",
                             "Station 4 - Soil/Rock:<br>You are buried in rock, changing into natural gas. Go to FOSSIL FUELS (Station 5).",
                             "Station 4 - Soil/Rock:<br>You are spewed out in a volcanic eruption.  Go to ATMOSPHERE (Station 1).",
@@ -62,23 +62,23 @@ function StationFour()
 }
 function StationFive()
 {
-    var myarray= new Array("Station 5 - Fossil Fuels:<br>",
-                           "Station 5 - Fossil Fuels:<br>",
-                           "Station 5 - Fossil Fuels:<br>",
-                           "Station 5 - Fossil Fuels:<br>",
-                           "Station 5 - Fossil Fuels:<br>",
-                           "Station 5 - Fossil Fuels:<br>");
+    var myarray= new Array("Station 5 - Fossil Fuels:<br>You are converted into gasoline for an automobile and released as CO2 during the combustion process.  Go to ATMOSPHERE (Station 1).",
+                           "Station 5 - Fossil Fuels:<br>You are being burned in a coal power plant and are released as CO2. Go to ATMOSPHERE (Station 1).",
+                           "Station 5 - Fossil Fuels:<br>You are mined for coal and breathed in by a coal miner. Go to ANIMALS (Station 3).",
+                           "Station 5 - Fossil Fuels:<br>You are burned in a coal plant and combine with water vapor to make acid rain. You run off into the OCEAN.  Go to OCEANS (Station 3).",
+                           "Station 5 - Fossil Fuels:<br>You are natural gas that has not yet been tapped and pumped above the ground. STAY at FOSSIL FUELS (Station 5).",
+                           "Station 5 - Fossil Fuels:<br>You are converted to petroleum and shipped through a long pipeline to a refinery, where you are released as carbon dioxide. Go to ATMOSPHERE (Station 1).");
     var random = myarray[Math.floor(Math.random() * myarray.length)];
    document.getElementById("s1").innerHTML=random;
 }
 function StationSix()
 {
-    var myarray= new Array("Station 6 - Ocean:<br>",
-                           "Station 6 - Ocean:<br>",
-                           "Station 6 - Ocean:<br>",
-                           "Station 6 - Ocean:<br>",
-                           "Station 6 - Ocean:<br>",
-                           "Station 6 - Ocean:<br>");
+    var myarray= new Array("Station 6 - Ocean:<br>You are converted into gasoline for an automobile and released as CO2 during the combustion process.  Go to ATMOSPHERE (Station 1).",
+                           "Station 6 - Ocean:<br>You are being burned in a coal power plant and are released as CO2. Go to ATMOSPHERE (Station 1).",
+                           "Station 6 - Ocean:<br>You are mined for coal and breathed in by a coal miner. Go to ANIMALS (Station 3).",
+                           "Station 6 - Ocean:<br>You are burned in a coal plant and combine with water vapor to make acid rain.  You run off into the ocean. Go to OCEANS (Station 6).",
+                           "Station 6 - Ocean:<br>You are natural gas that has not yet been tapped and pumped above the ground.  STAY at FOSSIL FUELS (Station 5).",
+                           "Station 6 - Ocean:<br>You are converted to petroleum and shipped through a long pipeline to a refinery, where you are released as carbon dioxide.  (CO2)  Go to ATMOSPHERE (Station 1).");
     var random = myarray[Math.floor(Math.random() * myarray.length)];
    document.getElementById("s1").innerHTML=random;
 }
@@ -98,7 +98,7 @@ function StationSix()
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">Carbon Cycle Simulator</h1>
-        <p class="lead">Choose a station to start at and click the station button.</br>Follow the instructions to go to another station OR continue at the current station.</br>Write down in your Google Doc which station number you stay at or go to for every click.</br>You will be using this information to make a chart of your travels through the water cycle.</p>
+        <p class="lead">Choose a station to start at and click the station button.</br>Follow the instructions to go to another station OR continue at the current station.</br>Write down in your Google Doc which station number you stay at or go to for every click.</br>You will be using this information to make a chart of your travels through the carbon cycle.</p>
 
         <h2 class="alert alert-info border border-info rounded-15" id="s1"></h2>
         <br>
