--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function StationSix()
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">Carbon Cycle Simulator</h1>
-        <p class="lead">Choose a station to start at and click the station button.</br>Follow the instructions to go to another station OR continue at the current station.</br>Write down in your Google Doc which station number you stay at or go to for every click.</br>You will be using this information to make a chart of your travels through the carbon cycle.</p>
+        <p class="lead">For this simulation you will start at Station 5: Fossil Fuels.</br>Click the station button and follow the instructions to go to another station OR continue at the current station.</br>Write down in your Google Doc which station number you stay at or go to for every click.</br>You will be using this information to make a chart of your travels through the carbon cycle.</p>
 
         <h2 class="alert alert-info border border-info rounded-15" id="s1"></h2>
         <br>
