--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ function StationFive()
 }
 function StationSix()
 {
-    var myarray= new Array("Station 6 - Ocean:<br>You are converted into gasoline for an automobile and released as CO2 during the combustion process.  Go to ATMOSPHERE (Station 1).",
-                           "Station 6 - Ocean:<br>You are being burned in a coal power plant and are released as CO2. Go to ATMOSPHERE (Station 1).",
-                           "Station 6 - Ocean:<br>You are mined for coal and breathed in by a coal miner. Go to ANIMALS (Station 3).",
-                           "Station 6 - Ocean:<br>You are burned in a coal plant and combine with water vapor to make acid rain.  You run off into the ocean. Go to OCEANS (Station 6).",
-                           "Station 6 - Ocean:<br>You are natural gas that has not yet been tapped and pumped above the ground.  STAY at FOSSIL FUELS (Station 5).",
-                           "Station 6 - Ocean:<br>You are converted to petroleum and shipped through a long pipeline to a refinery, where you are released as carbon dioxide. Go to ATMOSPHERE (Station 1).");
+    var myarray= new Array("Station 6 - Ocean:<br>You are dissolved in seawater and could be here a while. STAY at OCEANS (Station 6).",
+                           "Station 6 - Ocean:<br>You have just reacted with other chemicals in water. STAY at OCEANS (Station 6).",
+                           "Station 6 - Ocean:<br>You are part of a phytoplankton that was just eaten by a shrimp. Go to ANIMALS (Station 3).",
+                           "Station 6 - Ocean:<br>A whale just exhaled and released you into the air as carbon dioxide (C02) Go to ATMOSPHERE (Station 1).",
+                           "Station 6 - Ocean:<br>You are a plankton who just died and fell to the bottom of the ocean, becoming part of the sediments on the ocean floor. Go to SOIL/ROCK (Station 4).",
+                           "Station 6 - Ocean:<br>A fish just exhaled and released you into the water. STAY at OCEANS (Station 6).");
     var random = myarray[Math.floor(Math.random() * myarray.length)];
    document.getElementById("s1").innerHTML=random;
 }
